deployment/eks/nvidia-nim-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-nim
  labels:
    name: nvidia-nim
    app.kubernetes.io/name: nvidia-nim-platform
    app.kubernetes.io/version: "1.0.0"
